test_regress/t/t_mem_slice_dtype_bad.out
%Error: t/t_mem_slice_dtype_bad.v:22: ADD unexpected in assignment to unpacked array
%Error: Exiting due to
